tests/paczka1/small_fuzzy/86257752.err
Error in line 2: Hr3 A915 32,3
Error in line 7: V6z A915 17,80
Error in line 5: V6z S382 64,6
Error in line 1: HcSanwtI5X A915 50,3
Error in line 11: V6z A915 77,0
Error in line 6: YYsOQ3s A772 68,1
